--- a/app/views/tvshows/index.html.erb
+++ b/app/views/tvshows/index.html.erb
@@ -1,1 +1,7 @@
+<h1>Tv Shows</h1>
 
+<ul>
+  <% @tvshows.each do |tvshow| %>
+    <li><%= tvshow.name %>, <%= tvshow.image_url %></li>
+  <% end %>
+</ul>
