got show to work for recipe

--- a/app/views/tvshows/show.html.erb
+++ b/app/views/tvshows/show.html.erb
@@ -1,1 +1,8 @@
-<p> <%= @showid %> </p>
+<p> <%= @showid.name %> </p>
+<p> <%= @showid.type_of_show %> </p>
+<p> <%= @showid.number_of_seasons %> </p>
+<p> <%= @showid.start_date %> </p>
+<p> <%= @showid.end_date %> </p>
+<p> <%= @showid.creator %> </p>
+<p> <%= @showid.image_url %> </p>
+<p> <%= @showid.cost_per_episode_in_cents %> </p>
